Fixed settings tabs and did some basic styling so the text is visible

--- a/app/public/less/template.less
+++ b/app/public/less/template.less
@@ -72,5 +72,6 @@ body {
 	section#content {
 		height: 100%;
 		position: relative;
+		color: #ffffff;
 	}
 }
